--- a/index.html
+++ b/index.html
@@ -1,2 +1,18 @@
-<h1>Welcome to nu1silva.github.com</h1>
-<h3>Oops.. We are not live yet. Please come back in 1 week</h3>
+<!doctype html>
+<title>Maintenance underway...</title>
+<style>
+  body { text-align: center; padding: 150px; }
+  h1 { font-size: 50px; }
+  body { font: 20px Helvetica, sans-serif; color: #333; }
+  article { display: block; text-align: left; width: 750px; margin: 0 auto; }
+  a { color: #dc8100; text-decoration: none; }
+  a:hover { color: #333; text-decoration: none; }
+</style>
+
+<article>
+    <h1>Under Maintenance</h1>
+    <div>
+        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. we&rsquo;ll be back online shortly!</p>
+        <p>&mdash; Nuwan</p>
+    </div>
+</article>
