--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h1>Under Maintenance</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; Nuwan</p>
+        <p>&mdash; nu1silva</p>
     </div>
 </article>
